--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -62,9 +62,7 @@ jobs:
         run: yarn install
 
       - name: Install NuGet
-        shell: pwsh
-        run: |
-          pwsh -NoProfile -NonInteractive -Command Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force -Scope CurrentUser
+        uses: nuget/setup-nuget@v2
 
       - name: Create application bundle
         env:
