--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -41,9 +41,10 @@ productName: 'Launch Drupal CMS'
 
 win:
   artifactName: '${productName}.${ext}'
-  # Signing is done in its own build step, for tagged releases on CI only.
-  # @see .github/workflows/app-windows.yml
-  signtoolOptions:
-    sign: './build/disable-signtool.js'
+  azureSignOptions:
+    certificateProfileName: drupal-association-cert-profile
+    codeSigningAccountName: da-trusted-signing-001
+    endpoint: https://wus2.codesigning.azure.net/
+    publisherName: Drupal Association
   # On Windows, build a portable app that doesn't require installation.
   target: portable
