--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -61,42 +61,49 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install
 
-      - name: Install NuGet
-        uses: nuget/setup-nuget@v2
-
-      - name: Create application bundle
-        env:
-          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-        run: yarn run make
-
       - name: Delete PHP interpreter artifacts
         uses: geekyeggo/delete-artifact@v5
         with:
           name: php-windows
 
-#      - name: Code signing
-#        uses: azure/trusted-signing-action@v0.5.1
+      - name: Sign PHP executable
+        uses: azure/trusted-signing-action@v0.5.1
 #        if: startsWith(github.ref, 'refs/tags/')
-#        with:
-#          azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-#          azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
-#          azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-#          endpoint: https://wus2.codesigning.azure.net/
-#          trusted-signing-account-name: da-trusted-signing-001
-#          certificate-profile-name: drupal-association-cert-profile
-#          files-folder: "./dist/win-unpacked"
-#          files-folder-filter: exe,dll
-#          # We also want to sign the PHP interpreter.
-#          files-folder-recurse: true
-#          file-digest: SHA256
-#          timestamp-rfc3161: http://timestamp.acs.microsoft.com
-#          timestamp-digest: SHA256
+        with:
+          azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          endpoint: https://wus2.codesigning.azure.net/
+          trusted-signing-account-name: da-trusted-signing-001
+          certificate-profile-name: drupal-association-cert-profile
+          files-folder: "./bin"
+          files-folder-filter: exe,dll
+          file-digest: SHA256
+          timestamp-rfc3161: http://timestamp.acs.microsoft.com
+          timestamp-digest: SHA256
+
+      - name: Create application bundle
+        run: yarn run make
+
+      - name: Sign application bundle
+        uses: azure/trusted-signing-action@v0.5.1
+#        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          endpoint: https://wus2.codesigning.azure.net/
+          trusted-signing-account-name: da-trusted-signing-001
+          certificate-profile-name: drupal-association-cert-profile
+          files-folder: "./dist"
+          files-folder-filter: exe,dll
+          file-digest: SHA256
+          timestamp-rfc3161: http://timestamp.acs.microsoft.com
+          timestamp-digest: SHA256
 
       - name: Upload archive
         uses: actions/upload-artifact@v4
         with:
           name: app-windows
-          path: './dist/win-unpacked'
+          path: './dist/*.exe'
           overwrite: true
