--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -41,10 +41,7 @@ productName: 'Launch Drupal CMS'
 
 win:
   artifactName: '${productName}.${ext}'
-  azureSignOptions:
-    certificateProfileName: drupal-association-cert-profile
-    codeSigningAccountName: da-trusted-signing-001
-    endpoint: https://wus2.codesigning.azure.net/
-    publisherName: Drupal Association
+  signtoolOptions:
+    sign: './build/disable-signtool.js'
   # On Windows, build a portable app that doesn't require installation.
   target: portable
