--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -81,6 +81,7 @@ jobs:
           certificate-profile-name: drupal-association-cert-profile
           files-folder: "./dist/win-unpacked"
           files-folder-filter: exe,dll
+          files-folder-recurse: true
           file-digest: SHA256
           timestamp-rfc3161: http://timestamp.acs.microsoft.com
           timestamp-digest: SHA256
