--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -62,10 +62,6 @@ jobs:
         run: yarn install
 
       - name: Create application bundle
-        env:
-          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         run: yarn run make
 
       - name: Delete PHP interpreter artifacts
@@ -83,8 +79,9 @@ jobs:
           endpoint: https://wus2.codesigning.azure.net/
           trusted-signing-account-name: da-trusted-signing-001
           certificate-profile-name: drupal-association-cert-profile
-          files-folder: "./dist"
+          files-folder: "./dist/win-unpacked"
           files-folder-filter: exe,dll
+          files-folder-recurse: true
           file-digest: SHA256
           timestamp-rfc3161: http://timestamp.acs.microsoft.com
           timestamp-digest: SHA256
@@ -93,7 +90,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-windows
-          path: './dist/*.exe'
-          # The executable is already compressed.
-          compression-level: 0
+          path: './dist/win-unpacked'
           overwrite: true
