--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -40,8 +40,10 @@ mac:
 productName: 'Launch Drupal CMS'
 
 win:
-  # Signing is done separately, for tagged releases on CI only.
-  # @see .github/workflows/launcher-windows.yml
-  signAndEditExecutable: false
+  artifactName: '${productName}.${ext}'
+  signtoolOptions:
+    # We use Azure Trusted Signing as a separate step on CI.
+    # @see .github/workflows/app-windows.yml
+    sign: './build/disable-signtool.js'
   # On Windows, build a portable app that doesn't require installation.
   target: portable
