Pre-extract Composer on Windows

--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -23,22 +23,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download Composer
-        uses: robinraju/release-downloader@v1
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
         with:
-          repository: composer/composer
-          latest: true
-          fileName: composer.phar
-          out-file-path: bin
-
-      - name: Download PHP interpreter
-        uses: actions/download-artifact@v4
-        with:
-          name: php-windows
-
-      - name: Prepare binaries
-        shell: bash
-        run: mv php.exe bin
+          tools: composer
 
       - name: Set up Node
         uses: actions/setup-node@v4
@@ -61,8 +49,22 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install
 
+      - name: Download PHP interpreter
+        uses: actions/download-artifact@v4
+        with:
+          name: php-windows
+
       - name: Create application bundle
-        run: yarn run make
+        shell: bash
+        run: |
+          mkdir -p bin
+          mv php.exe bin
+          cd bin
+          cp $(which composer) composer.phar
+          phar extract -f composer.phar ./composer
+          rm composer.phar
+          ls -lR
+          yarn run make
 
       - name: Delete PHP interpreter artifacts
         uses: geekyeggo/delete-artifact@v5
