--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Create application bundle
         shell: bash
         run: |
+          which php
           mkdir -p bin
           mv php.exe bin
           cd bin
