[debug] Windows: list everything in /c/tools/php

--- a/.github/workflows/app-windows.yml
+++ b/.github/workflows/app-windows.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Create application bundle
         shell: bash
         run: |
-          which php
+          ls /c/tools/php
           mkdir -p bin
           mv php.exe bin
           cd bin
