--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A quick-start launcher for Drupal CMS.",
   "main": "main.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "make": "electron-builder --publish never"
   },
