--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A quick-start launcher for Drupal CMS.",
   "main": "main.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "make": "electron-builder --publish never"
   },
   "author": "Drupal Association",
   "license": "MIT",
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "electron": "^34.0.1",
     "electron-builder": "26.0.12"
   },
