Temporarily disable dependency caching on CI to work around a bug in npm

--- a/.github/workflows/app-linux.yml
+++ b/.github/workflows/app-linux.yml
@@ -43,15 +43,15 @@ jobs:
           corepack enable
           yarn set version berry
 
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+#      - name: Cache dependencies
+#        id: cache
+#        uses: actions/cache@v4
+#        with:
+#          path: node_modules
+#          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
 
       - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+#        if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install
 
       - name: Download PHP interpreter
