--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@sentry/electron": "^6.7.0",
     "get-port": "^7.1.0"
   },
   "packageManager": "yarn@4.9.1"
