--- a/.github/workflows/app-macos.yml
+++ b/.github/workflows/app-macos.yml
@@ -104,6 +104,7 @@ jobs:
 
       - name: Create application bundle
         run: |
+          echo "export default '${{ secrets.SENTRY_DSN }}' as string;" > ./src/main/sentry.ts
           mkdir -p bin
           chmod +x php
           mv php bin
